- more examples in Imager::Draw
- minor cleanup of Imager::Fill
- eliminate unused variables and static functions
- simplify some XS code by adding another typemap entry
- the right-side bearing used to adjust the final width wasn't being
  calculated correctly, this would cause the bounding_box() function for 
  freetype 2.x to return a larger than expected text width.
  http://rt.cpan.org/NoAuth/Bug.html?id=11291
- add scaleX/scaleY to the method index and gives them some examples
  http://rt.cpan.org/NoAuth/Bug.html?id=11328
- call read() instead of open() in the example code in Imager.pm,
  and mention that open() is an alias for read().
  http://rt.cpan.org/NoAuth/Bug.html?id=11431
- added reference list of crop() parameters.
  http://rt.cpan.org/NoAuth/Bug.html?id=11430
- reading a tga image with an idstring of 128 or more bytes would result 
  in an allocation error, if the platform char type was signed
- tests now check that tga tags are set
- calling the read() method for a format not included in the Imager build,
  for example, JPEG with no libjpeg installed, would crash with an 
  undefined function error (modified by DynaLoaders dependence on 
  AutoLoader.)
  http://rt.cpan.org/NoAuth/Bug.html?id=9618
- some test scripts have been modified to use Test::More, which is now
  included under the t directory.  Eventually all will be modified to use
  Test::More and the duplicates in t/testtools.pl will be removed
- the convert, crop, rotate, copy, matrix_transform, to_paletted, to_rgb8, 
  scaleX and scaleY methods now warn when called in void context.
  http://rt.cpan.org/NoAuth/Bug.html?id=9672
- correct email addresses in the README file, and include bug reporting
  information there too

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
